--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>Stencil Component Starter</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@400;600&display=swap" rel="stylesheet">
+
     <script type="module" src="/build/stencil-design-system-canais-digitais.esm.js"></script>
     <script nomodule src="/build/stencil-design-system-canais-digitais.js"></script>
   </head>
   <body>
-    <web-button>
-      <span>🔴 Customizado</span>
+    <web-button type-btn="secondary-default" disable-btn="true" label-btn="Primary button">
+      <!-- <span>🔴 Customizado</span> -->
     </web-button>
   </body>
 
